[package]
name = "x11-over-vsock"
version = "0.1.1"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[dependencies]
tokio = { version = "=1.20.1", features = ["net", "rt", "macros", "io-util", "time"] }
proc-macro2 = "=1.0.43"
unicode-ident = "=1.0.3"
quote = "=1.0.21"
log = "=0.4.17"
syn = "=1.0.99"
autocfg = "=1.1.0"
memchr = "=2.5.0"
cfg-if = "=1.0.0"
pin-project-lite = "=0.2.9"
bytes = "=1.2.1"
once_cell = "=1.13.0"
socket2 = "=0.4.4"
mio = "=0.8.4"
tokio-macros = "=1.8.0"

[target.'cfg(windows)'.dependencies]
async-io = "=1.7.0"
once_cell = "=1.13.0"
winapi = { version = "=0.3.9", features = ["wincon", "libloaderapi", "combaseapi"] }
widestring = "=0.4.3"
serde = { version = "=1.0.142", features = ["derive"] }
serde_json = "=1.0.83"
uuid = { version = "=0.8.2", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "=0.2.127"
